@@ -2,9 +2,7 @@ package net.notcoded.wayfix.util;
 
 import net.minecraft.client.MinecraftClient;
 import net.notcoded.wayfix.WayFix;
-//? if <1.19 {
-/*import org.apache.commons.io.IOUtils;
-*///?}
+import org.apache.commons.compress.utils.IOUtils;
 
 import java.io.IOException;
 import java.util.regex.Matcher;
@@ -36,11 +34,7 @@ public class WindowHelper {
 
         try {
             Process process = builder.start();
-            //? if >=1.19 {
-            String result = new String(process.getInputStream().readAllBytes());
-            //?} elif <1.19 {
-            /*String result = new String(IOUtils.toByteArray(process.getInputStream()));
-            *///?}
+            String result = new String(IOUtils.toByteArray(process.getInputStream()));
             Pattern pattern = Pattern.compile("Position:\\s*(\\d+),(\\d+)");
             Matcher matcher = pattern.matcher(result);
             if (matcher.find()) {
@@ -61,11 +55,7 @@ public class WindowHelper {
 
         try {
             Process process = builder.start();
-            //? if >=1.19 {
-            String result = new String(process.getInputStream().readAllBytes());
-            //?} elif <1.19 {
-            /*String result = new String(IOUtils.toByteArray(process.getInputStream()));
-            *///?}
+            String result = new String(IOUtils.toByteArray(process.getInputStream()));
             Pattern pattern = Pattern.compile("Window \\{(\\w+-\\w+-\\w+-\\w+-\\w+)}");
             Matcher matcher = pattern.matcher(result);
             if (matcher.find()) {
